--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0",
+    "update": "^0.7.4",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "tw-colors": "^3.3.2",
     "typescript": "^5"
   }
 }
