--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.0",
+    "redux-persist": "^6.0.0",
     "update": "^0.7.4",
     "uuid": "^11.0.3"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/redux-persist": "^4.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
